fixed overflow-y on main scroller. might impair ipad functionality

--- a/src/css/act_browser.scss
+++ b/src/css/act_browser.scss
@@ -347,7 +347,7 @@ body{
         bottom: 0;
         padding-left: 0;
         padding-right: 0;
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
         -webkit-overflow-scrolling: touch;
          -webkit-backface-visibility: hidden;
